docs: add strict tooling gates to stack skills and remove stacks/